--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.5.1",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "joi": "^17.10.2"
+    "joi": "^17.10.2",
+    "mongoose": "^8.0.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.18",
